k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: support-app
  labels:
    app: support-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: support-app
  template:
    metadata:
      labels:
        app: support-app
    spec:
      containers:
      - name: support-app-container
        image: acrcarlos69lm.azurecr.io/support-app:latest # Se actualizará via GH Actions
        ports:
        - containerPort: 3000
